--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "cviebrock/eloquent-sluggable": "^12.0",
         "darkaonline/l5-swagger": "^9.0",
         "intervention/image": "2.7.2",
         "laravel/framework": "^12.0",
